--- a/public/client.css
+++ b/public/client.css
@@ -2,70 +2,49 @@ body {
     background-color: #555;
     margin: 0;
     display: flex;
-    justify-content: center;
-    align-items: center;
     height: 100%;
     position: absolute;
     width: 100%;
 }
 
 .clients {
-    display: flex;
-    flex-wrap: wrap;
     padding: 8px;
     width: 100%;
     box-sizing: border-box;
-    justify-content: center;
+    max-height: 100%;
 }
 
 .client {
-    flex-grow: 1;
-    width: 400px;
-    border:  2px solid black;
-    box-sizing: border-box;
+    display: inline-block;
+    vertical-align: top;
+    width: 20%;
     margin: 8px;
-    background: black;
-    max-height: calc(100vh - 32px);
-    text-align: center;
-    position: relative;
-    overflow: auto;
-    max-width: 640px;
 }
 
 .client video {
     vertical-align: top;
     width: 100%;
-    height: 100%;
-    object-fit: contain;
+    object-fit: cover;
     box-sizing: border-box;
     outline: none;
+    border-radius: 8px 8px 0 0;
+    background: #444;
+    height: 100%;
 }
 
 .client .controlbox {
     padding: 8px;
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    background: rgba(0, 0, 0, 0.5);
+    background: #444;
     box-sizing: border-box;
-    z-index: 1;
-}
-
-input[type='range']::before {
-    content: "VOLUME";
-    position: absolute;
-    left: 3px;
-    top: 1px;
-    font: bold 14px/14px Arial;
-    color: #3FB6FF;
+    border-radius: 0 0 8px 8px;
+    height: 48px;
 }
 
 input[type='range'] {
     overflow: hidden;
     width: 120px;
     -webkit-appearance: none;
-    background-color: #000;
+    background-color: #333;
     outline: none;
     vertical-align: middle;
     margin: 8px;
@@ -73,10 +52,18 @@ input[type='range'] {
     position: relative;
 }
 
+input[type='range']::before {
+    content: "Volume";
+    position: absolute;
+    left: 3px;
+    top: 1px;
+    font: bold 14px/14px Arial;
+    color: #777;
+}
+
 input[type='range']::-webkit-slider-runnable-track {
     height: 16px;
     -webkit-appearance: none;
-    color: #34779F;
 }
 
 input[type='range']::-webkit-slider-thumb {
@@ -84,19 +71,63 @@ input[type='range']::-webkit-slider-thumb {
     -webkit-appearance: none;
     height: 16px;
     cursor: ew-resize;
-    background: #3FB6FF;
-    box-shadow: -120px 0 0 120px #34779F;
+    background: #777;
+    box-shadow: -120px 0 0 120px #666;
 }
 
-input[type="range"]::-moz-range-progress {
-    background-color: #3FB6FF;
+.sidebar {
+    height: 100%;
+    width: 20%;
+    padding: 16px 0 16px 16px;
+    box-sizing: border-box;
 }
-input[type="range"]::-moz-range-track {  
-    background-color: #000;
+
+.sidebar .textchat {
+    display: flex;
+    height: 100%;
+    flex-direction: column;
 }
-input[type="range"]::-ms-fill-lower {
-    background-color: #3FB6FF;
+
+.sidebar textarea {
+    width: 100%;
+    padding: 0;
+    border: 0;
+    outline: none;
+    resize: none;
+    display: block;
+    background: #444;
+    padding: 16px;
+    font: bold 14px/18px Arial;
+    color: #fff;
+    box-sizing: border-box;
 }
-input[type="range"]::-ms-fill-upper {  
-    background-color: #000;
+
+.sidebar .chat {
+    flex: 1;
+    border-radius: 8px 8px 0 0;
+}
+
+.sidebar .message {
+    height: 10vh;
+    margin-top: 16px;
+}
+
+.sidebar .send {
+    border: none;
+    background-color: #444;
+    border-radius: 0 0 8px 8px;
+    font: bold 14px/18px Arial;
+    display: block;
+    outline: none;
+    padding: 8px;
+    box-sizing: border-box;
+    color: #fff;
+}
+
+.sidebar .send:hover {
+    background: #333;
+}
+
+.sidebar .send:active {
+    background: #222;
 }
